css/styles.css
/* ... */
.contact_us_8 .form-box {
  position: relative;
  margin-top: 60px;
  margin-right: auto;
  margin-bottom: 60px;
  margin-left: auto;
  max-width: 830px;
  width: 100%;
}

.contact_us_8 ::placeholder {
  color: #dadada;
}

.contact_us_8 .right-side-text {
  position: absolute;
  top: 0px;
  height: 100%;
  right: 0;
  background-color: rgba(151, 220, 250, 0.44);
  max-width: 363px;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.contact_us_8 .social-media-links {
  width: 230px;
  display: flex;
  justify-content: space-evenly;
}

.contact_us_8 .checkboc-container {
  display: flex;
  align-items: flex-start;
}

.contact_us_8 .checkbox-text {
  color: #9c9c9c;
  margin-top: 16px;
  margin-right: 0px;
  margin-bottom: 16px;
  margin-left: 10px;
  margin: 0 0 0 10px;
  text-align: left;
}

.contact_us_8 .responsive-cell-block.wk-tab-12.wk-mobile-12.wk-desk-8.wk-ipadp-12.checkbox-container {
  min-height: 30px;
  margin: 0 0 30px 0;
}

@media (max-width: 1024px) {
  .contact_us_8 .right-side-text {
    right: 0px;
    top: 0px;
    height: 250px;
    width: 100%;
    max-width: 100%;
  }

  .contact_us_8 .container-block.form-wrapper {
    margin-top: 200px;
    margin-right: 0px;
    margin-bottom: 50px;
    margin-left: 0px;
    padding-top: 70px;
    padding-right: 40px;
    padding-bottom: 50px;
    padding-left: 40px;
  }

  .contact_us_8 .form-box {
    margin-top: 60px;
    margin-right: auto;
    margin-bottom: 60px;
    margin-left: auto;
  }

  .contact_us_8 .text-blk.contactus-subhead {
    max-width: 400px;
  }

  .contact_us_8 .right-side-text {
    width: 85%;
    left: 0px;
    margin-top: 0px;
    margin-right: auto;
    margin-bottom: 0px;
    margin-left: auto;
  }

  .contact_us_8 .form-box {
    display: flex;
    justify-content: center;
  }
}

@media (max-width: 768px) {
  .contact_us_8 .submit-btn {
    width: 100%;
  }

  .contact_us_8 .input {
    width: 100%;
  }

  .contact_us_8 .textinput {
    width: 100%;
  }

  .contact_us_8 .container-block.form-wrapper {
    margin-top: 80px;
    margin-right: 0px;
    margin-bottom: 0px;
    margin-left: 0px;
  }

  .contact_us_8 .container-block.form-wrapper {
    margin-top: 200px;
    margin-right: 0px;
    margin-bottom: 50px;
    margin-left: 0px;
  }

  .contact_us_8 .text-blk.contactus-head {
    font-size: 32px;
  }
}

@media (max-width: 500px) {
  .contact_us_8 .container-block.form-wrapper {
    padding-top: 50px;
    padding-right: 15px;
    padding-bottom: 50px;
    padding-left: 15px;
  }

  .contact_us_8 .container-block.form-wrapper {
    margin-top: 60px;
    margin-right: 0px;
    margin-bottom: 0px;
    margin-left: 0px;
  }

  .contact_us_8 .responsive-cell-block.wk-ipadp-6.wk-tab-12.wk-mobile-12.wk-desk-6 {
    margin-top: 0px;
    margin-right: 0px;
    margin-bottom: 15px;
    margin-left: 0px;
  }

  .contact_us_8 .responsive-container-block {
    margin-top: 0px;
    margin-right: 0px;
    margin-bottom: 35px;
    margin-left: 0px;
  }

  .contact_us_8 .container-block.form-wrapper {
    margin-top: 220px;
    margin-right: 0px;
    margin-bottom: 50px;
    margin-left: 0px;
  }

  .contact_us_8 .right-side-text {
    width: 100%;
    margin-top: 0px;
    margin-right: auto;
    margin-bottom: 0px;
    margin-left: auto;
    left: 0px;
    max-width: 310px;
  }

  .contact_us_8 .right-side-text {
    max-width: 280px;
  }

  .contact_us_8 .text-blk.contactus-head {
    font-size: 26px;
    line-height: 34px;
    margin-top: 0px;
    margin-right: 0px;
    margin-bottom: 10px;
    margin-left: 0px;
  }

  .contact_us_8 .text-blk.contactus-subhead {
    max-width: 250px;
    margin-top: 0px;
    margin-right: 0px;
    margin-bottom: 20px;
    margin-left: 0px;
  }

  .contact_us_8 .form-box {
    padding-top: 0px;
    padding-right: 20px;
    padding-bottom: 0px;
    padding-left: 20px;
  }

  .contact_us_8 .checkboc-container {
    align-items: flex-start;
  }

  .contact_us_8 .input {
    height: 45px;
  }
}
.banner-background {
  display: inline-block;
  background-color: rgba(0, 0, 0, 0.7);  /* Semi-transparent black */
  padding: 40px 40px 40px 40px;
  justify-content: center; /* Center horizontally */
  align-items: center; /* Center vertically */
  text-align: center; /* Center the text itself */
  border-radius: 10px;  /* Optional: for rounded corners */
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);  /* Optional: shadow for better contrast */
}


.carousel-caption {
  position: absolute;
  bottom: 0; /* Align the caption to the bottom of the image */
  left: 0;
  width: 100%; /* Make sure the caption stretches the full width */
  color: white; /* White text color */
  padding: 10px 20px; /* Padding around the text */
}

.carousel-caption h5, .carousel-caption p {
  margin: 0; /* Remove default margin */
  text-align: center; /* Center the text */
}

.button-container {
  text-align: center; /* Center the buttons horizontally */
  margin-top: 20px;   /* Optional: add top margin */
}

.btn {
  font-size: 18px;
  padding: 10px 10px 10px 10px;
  margin: 0 10px;     /* Adds horizontal space between buttons */
  display: inline-block;
}

